# aiida-testing

./: .aiida-mock-codes.yml  .aiida-testing-config.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE.txt  MANIFEST.in  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.json  setup.py
.ci/: install_aiida_github.sh
.github/workflows/: ci.yml
aiida_mock_codes/: _cli.py  _env_keys.py  _mock_code.py
aiida_pytest_mock_codes/: __init__.py  _cli.py  _mock_code.py
aiida_testing/: __init__.py  _config.py
aiida_testing/export_cache/: __init__.py  _fixtures.py
aiida_testing/mock_code/: __init__.py  _cli.py  _env_keys.py  _fixtures.py
docs/: .gitignore
docs/source/: conf.py  index.rst
docs/source/developer_guide/: index.rst
docs/source/user_guide/: export_cache.rst  get_started.rst  index.rst  mock_code.rst
tests/: conftest.py
tests/data/mock-diff-broken-f534448b2c9c7c1152acd8ba8bcb3281/: _scheduler-stderr.txt
tests/export_cache/: test_export_cache.py
tests/export_cache/calc_data/mock-diff-4b5ca93b23993979a24f795147487f1c/: patch.diff
tests/export_cache/test_export_cache/: file1.txt
tests/mock_code/: test_diff.py  test_ignore_paths.py
tests/mock_code/test_diff/: file2.txt
utils/: fastentrypoints.py  validate_version_consistency.py
