[build-system]
requires = ["setuptools >= 46.4.0", "wheel", "fastentrypoints"]
build-backend = "setuptools.build_meta"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "duplicate-code",
]

[tool.pytest.ini_options]

filterwarnings = [
    "ignore::DeprecationWarning:frozendict:",
    "ignore::DeprecationWarning:reentry:",
    "ignore::DeprecationWarning:babel:",
    "ignore::DeprecationWarning:sqlalchemy_utils:",
]
