[metadata]
name = aiida-testing
author = Dominik Gresch, Leopold Talirz, Jens Bröder, Philipp Rüßmann, and the AiiDA team
author_email =
version = attr: aiida_testing.__version__
url = https://aiida-testing.readthedocs.io/
description = Helpers for testing AiiDA plugins using pytest
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    AiiDA
    testing
    pytest
    mock
    cache
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Physics
    Framework :: AiiDA
    Framework :: Pytest

[options]
python_requires = >=3.6
include_package_data = true
install_requires =
    aiida-core>=1.0.0<2.0.0
    pytest>=3.6
    pyyaml~=5.1.2
    voluptuous~=0.11.7
packages = find:

[options.extras_require]
docs =
  sphinx
  sphinx-rtd-theme
testing =
  pgtest~=1.3.1
  aiida-diff
  pytest-datadir
pre_commit =
  astroid==2.2.5
  yapf==0.28
  pre-commit
  prospector==1.1.7
  pylint==2.3.1
  mypy==0.740


[options.entry_points]
console_scripts =
  aiida-mock-code = aiida_testing.mock_code._cli:run

